--- a/localisation/braz_por/phi_l_braz_por.yml
+++ b/localisation/braz_por/phi_l_braz_por.yml
@@ -1015,3 +1015,67 @@ tech_shield_point_zero_desc:1 "Este escudo de tecnologia de ponta usa a energia 
 tech_armor_boost:0 "Armaduras de Energia Zero-Ponto-Absoluto"
 tech_armor_boost_desc:1 "Esta tecnologia de ponta utiliza a energia do Zero-Ponto-Absoluto na superfície da armadura. O escudo de energia pode ricochetear em superfícies sem danificar a armadura\n§RAtenção§! Se você estudar essa tecnologia, terá §Rmenos§! chance de descobrir §YEscudos de Energia Zero-Ponto-Absoluto§! que aumentam o escudo em 33%."
 
+CORVETTE_MID_M1S2:3 "Embarcação Torpedeira Pesada"
+OFFSPRING_CORVETTE_MID_M1S1:0 "$CORVETTE_MID_M1S1$"
+CORVETTE_MID_S4:3 "Projeto blindado"
+OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
+
+casus_belli_FW_cb_border:0 "Fronteira fechada"
+war_goal_FW_wg_open_border: "Fronteira aberta"
+war_goal_FW_wg_open_border_desc: "Inicie uma guerra para abrir as fronteiras de uma civilização hostil e obter 20 anos de direito de passagem.
+
+O inimigo §G não pode§! sobreviver à guerra, §R não pode§! conseguir reivindicações!"
+
+z_fw_open_border_tooltip:0 "O §Y[From.GetName] §! foi derrotado, eles abaixaram a sua arrogância e concordaram em abrir a fronteira para nós dentro de §Y20§! anos.
+O §Y[Root.GetName]§! ganhou §G+ 100 §! £influência£ \ n "
+
+trait_talented_2:0 "Sobremaneira talentoso"
+trait_talented_2_desc:0: "§L Os membros desta espécie estão geneticamente modificados com uma aptidão avassaladora.§! \ n "
+job_organic_brain:0 "Calculador cerebral"
+slavery_brain:0 "Escravidão cerebral"
+
+tech_defense_platform_hull_2:0 "$tech_defense_platform_hull_1$ MK2"
+
+edict_expansion_planer: "Expandir o tamanho do império"
+edict_expansion_planer_desc:0 "Expandir o limite do nosso império para nova colônia"
+
+tech_defense_platform_hull_2_desc:0 "$tech_defense_platform_hull_1_desc$"
+job_organic_brain_plural:0 "Calculadores Cerebrais"
+slavery_brain_tooltip:0 "Use eles o cérebro orgânico com o um calculador eles são otimizados para a pesquisa da sociedade e unidade"
+slavery_brain_tooltip_delayed:0 "Cada cérebro orgânico produz 2 £society_research£ e 0,25 £unity£"
+OUR_CLAIMS_ON_ENEMYS:1 "Se nós temos reivindicações que estamos tentando conquistar do inimigo e seus aliados."
+ALLY_CLAIMS_ON_ENEMYS:1 "Se Nossos aliados têm reivindicações que estamos tentando conquistar do inimigo e seus aliados."
+
+edict_dark_matter_explosives: "Dark Matter explosives"
+edict_dark_matter_explosives_desc:0 "Using dark matter for missiles can be very useful if you want to cause damage."
+edict_dark_matter_point_grid: "Dark Matter defense grid"
+edict_dark_matter_point_grid_desc:0 "Use dark matter to create a defense grid for point defense."
+edict_dark_matter_ammunition: "Dark Matter air strike"
+edict_dark_matter_ammunition_desc:0 "Use dark matter for ammunition of air strike"
+
+economic_policy_leader_focus: "Leader Focus"
+economic_policy_leader_focus_desc: "We allocate the necessary resources for our leaders to be the best."
+economic_policy_politics: "Politics Focus"
+economic_policy_politics_desc: "We allocate the necessary resources for our politics have power and resource for all.."
+economic_policy_statecraft: "Statecraft Focus"
+economic_policy_statecraft_desc: "We will bring twice the resources to the council."
+old_economic_policy_statecraft_desc: "\n\n§YUnlock§! 1 slot of council and new rule powerfull vice ruler"
+drone_economic_policy_leader_focus: "Leader Focus"
+drone_economic_policy_leader_focus_desc: "We allocate the necessary resources for our protocol leader to be the best of 3,167777%."
+drone_economic_policy_politics: "Politics Focus"
+drone_economic_policy_politics_desc: "We allocate the necessary resources for our politics have power and resource for all.."
+drone_economic_policy_statecraft: "Statecraft Focus"
+drone_economic_policy_statecraft_desc: "We will bring twice of calculation to the council."
+mod_planet_jobs_ruler_upkeep_mult:0 "Ruler Jobs Upkeep"
+
+councilor_vice_governor:0 "vice $councilor_ruler$"
+councilor_vice_governor_female:0 "vice $councilor_ruler_female$"
+councilor_vice_governor_desc:0 "The vice work with best counciliors and best optimization of governement"
+councilor_corporate_dominion_2:0 "$councilor_corporate_dominion$"
+councilor_corporate_dominion_2_female:0 "$councilor_ruler_female$"
+councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
+
+
+councilor_franchise_state:0 "franchises ruler"
+councilor_franchise_state_female:0 "franchises ruler"
+councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
