--- a/localisation/replace/phi_replace_l_italian.yml
+++ b/localisation/replace/phi_replace_l_italian.yml
@@ -182,4 +182,6 @@ tr_synchronicity_machine_finish_desc:3 "§HSblocca Editto:§! $edict_industrial_
  OUR_CLAIMS_ON_ENEMY:1 "" #fix problem that ssend you can gt claim when not true.
  ALLY_CLAIMS_ON_ENEMY:1 ""
 
+war_goal_wg_conquest_desc:1 "La guerra è combattuta per conquistare i sistemi nemici rivendicati. Utilizzando questo obiettivo di guerra per prendere le rivendicazioni si genera il §Y25%§! in meno di §YMinaccia§! per ogni sistema conquistato.\n$OUR_CLAIMS_ON_ENEMYS$\n$ALLY_CLAIMS_ON_ENEMYS$"
+
 origin_tooltip_imperial_vassal_effects:1 "§G- ATTENZIONE: Origine facile per i nuovi giocatori.§!\n- Inizia come vassallo di un §HImpero AI avanzato§!.\n- Ottieni l'opzione di scegliere un tipo di vassallo §HEmpire Specialist§! all'inizio del gioco."
