--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -278,9 +278,11 @@ infamous_bastard: "Infamous Bastard"
 infamous_bastard_desc: "We are the pariah of the Galaxy. Recovering our reputation will take a long time."
 tora_tora_tora: "TORA!TORA!TORA!"
 tora_tora_tora_desc: "We are suddenly at war, and changing diplomatic posture will require some time."
+carrier_name: "Carrier"
 mod_shipsize_carrier_hull_mult: "Carrier Hull Points"
 mod_shipsize_carrier_build_speed_mult: "Carrier Build Speed"
 mod_shipsize_carrier_upkeep_mult: "Carrier Upkeep"
+mod_ship_battleship_cost_mult:0 "$carrier_name$ Build Cost"
 mod_planet_pops_organics_upkeep_mult: "Organic Pops Upkeep"
 mod_country_base_minor_artifacts_produces_add: "Minor Artifacts Production"
 phi_rebels_victory: "Rebels victory"
