--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -288,9 +288,11 @@ infamous_bastard: "Infame Bastardo"
 infamous_bastard_desc: "Siamo il paria della Galassia. Ci vorrà molto tempo per ripristinare la nostra reputazione."
 tora_tora_tora: "TORA!TORA!TORA!"
 tora_tora_tora_desc: "Siamo improvvisamente in guerra, e cambiare la nostra posizione diplomatica richiederà del tempo."
+carrier_name: "Portaerei"
 mod_shipsize_carrier_hull_mult: "Punti scafo portaerei"
 mod_shipsize_carrier_build_speed_mult: "Velocità di costruzione portaerei"
 mod_shipsize_carrier_upkeep_mult: "Costi di mantenimento portaerei"
+mod_ship_battleship_cost_mult:0 "$carrier_name$ Build Cost"
 mod_planet_pops_organics_upkeep_mult: "Costi di mantenimento popolazioni organiche"
 mod_country_base_minor_artifacts_produces_add: "Produzione di manufatti minori"
 phi_rebels_victory: "Vittoria dei ribelli"
